samples/_failures_safe/1761042102_b6488b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f334d1f.c: In function ‘graph_reset_visited’:
./samples/SAFE/__tmp_9f334d1f.c:165:11: error: expected ‘)’ at end of input
  165 |     if (!g
      |        ~  ^
      |           )
./samples/SAFE/__tmp_9f334d1f.c:165:5: error: expected declaration or statement at end of input
  165 |     if (!g
      |     ^~
